--- a/src/main/resources/templates/send_otp.html
+++ b/src/main/resources/templates/send_otp.html
@@ -2,16 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>OTP Verification</title>
 </head>
 <body>
-
-    <div>
-
-        Your otp is {{otp}}
-
-
-    </div>
-
+<div>
+    Your one-time code is: {{message}}
+</div>
 </body>
 </html>
